--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
+---
 language: rust
 cache: cargo
 
 rust: nightly
 
 sudo: false
+
+
+branches:
+  only:
+    - staging
+    - trying
 
 env:
  global:
