--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ before_cache:
 
 rust: nightly
 
-sudo: false
+services:
+  - docker
 
 branches:
   only:
@@ -18,10 +19,17 @@ env:
   global:
     - RUST_BACKTRACE=full
     - OPENSSL_STATIC=1
+    - DOCKER_COMPOSE_VERSION=1.22.0
+
+before_install:
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
 
 script:
   - rustc -vV
-  - cargo test --all
+  - cargo test --all -- --nocapture
   - cargo build --release
 
 before_deploy:
